--- a/main.css
+++ b/main.css
@@ -6,6 +6,11 @@ svg {
     -ms-user-select: none;
     -o-user-select: none;
     user-select: none;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
 }
 
 svg:not(.active):not(.ctrl) {
@@ -60,13 +65,21 @@ text.id {
 
 /* Style input (right side) */
 
-table {
-    width: 100% !important;
+td{
+    width: 50px !important;
+    height: 50px!important;
+    position: relative;
 }
 
-table,
-th,
-td {
-    border: 1px solid black;
-    padding: 5px;
+input.inputMatrix {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    width: 50px;
+    height: 50px;
+    padding: 0px;
+    margin: 0px;
+    line-height: 50px;
+    font-size: 1.5em;
+    text-align: center;
 }
